# FastGameOfLife

./: .gitignore  CMakeLists.txt  License.txt  LifeGameFast.sln  README.md
00_doc/: LifeGameFast.asta  LifeGameFast.pptx  data.xlsx
00_doc/SamplePatterns/: pattern1.txt  pattern2.txt  pattern3.txt
00_doc/convRle2Map/: convRle2Map.bat  convRle2Map.py
AlgorithmCudaGroup/: AlgorithmCudaGroup.vcxproj  algorithmCudaGroup.h  algorithmCudaGroupInternal.h  kernel.cu  kernel_0.cu  main.cpp  referenceCode.cpp
AlgorithmCudaNormal/: AlgorithmCudaNormal.vcxproj  _kernel_2.cu  algorithmCudaNormal.h  algorithmCudaNormalInternal.h  kernel.cu  kernel_0.cu  kernel_0_stream.cu  kernel_1.cu  kernel_2.cu  kernel_2_stream.cu  kernel_3_stream.cu  main.cpp  referenceCode.cpp
ExternalLibs/AntTweakBar/: CMakeLists.txt
ExternalLibs/AntTweakBar/include/: AntTweakBar.h
ExternalLibs/AntTweakBar/src/: LoadOGLCore.cpp  LoadOGLCore.h  TwMgr.cpp
ExternalLibs/freeglut/include/GL/: freeglut_std.h
GameOfLife/: AnalView.cpp  AnalView.h  AnalViewAge.cpp  AnalViewAge.h  AnalViewGroup.cpp  AnalViewGroup.h  AnalViewVirus.cpp  AnalViewVirus.h  CMakeLists.txt  Common.h  ControllerView.cpp  ControllerView.h  FileAccessor.cpp  FileAccessor.h  ILogic.h  IView.h  LifeGameFast.cpp  LogicBase.cpp  LogicBase.h  LogicGroup.cpp  LogicGroup.h  LogicGroupCuda.cpp  LogicGroupCuda.h  LogicNormal.cpp  LogicNormal.h  LogicNormalCuda.cpp  LogicNormalCuda.h  LogicNormalMP.cpp  LogicNormalMP.h  LogicNormalNonTorus.cpp  LogicNormalNonTorus.h  LogicNormalNonTorusMP.cpp  LogicNormalNonTorusMP.h  LogicVirusNormal.cpp  LogicVirusNormal.h  Person.cpp  Person.h  Values.h  WindowManager.cpp  WindowManager.h  (+6 more)
GameOfLife/AlgorithmCudaGroup/: CMakeLists.txt  algorithmCudaGroup.h  algorithmCudaGroupInternal.h  kernel.cu  kernel_0.cu  main.cpp  referenceCode.cpp
GameOfLife/AlgorithmCudaNormal/: CMakeLists.txt  _kernel_2.cu  algorithmCudaNormal.h  algorithmCudaNormalInternal.h  kernel.cu  kernel_0.cu  kernel_0_stream.cu  kernel_1.cu  kernel_2.cu  kernel_2_stream.cu  kernel_3_stream.cu  main.cpp  referenceCode.cpp
LifeGameFast/: AnalView.cpp  AnalView.h  AnalViewAge.cpp  AnalViewAge.h  AnalViewGroup.cpp  AnalViewGroup.h  ControllerView.cpp  ControllerView.h  FileAccessor.cpp  FileAccessor.h  ILogic.h  IView.h  IWorldLogic.h  IWorldView.h  LifeGameFast.cpp  LifeGameFast.vcxproj  LifeGameFast.vcxproj.filters  LogicBase.cpp  LogicBase.h  LogicGroup.cpp  LogicGroup.h  LogicGroupCuda.cpp  LogicGroupCuda.h  LogicNormal.cpp  LogicNormal.h  LogicNormalCuda.cpp  LogicNormalCuda.h  LogicNormalMP.cpp  LogicNormalMP.h  LogicNormalNonTorus.cpp  LogicNormalNonTorus.h  LogicNormalNonTorusMP.cpp  LogicNormalNonTorusMP.h  Values.h  WindowManager.cpp  WindowManager.h  World.cpp  World.h  WorldContext.cpp  WorldContext.h  (+8 more)
SamplePatterns/: pattern1.txt  pattern2.txt  pattern3.txt
cmakes/: JETSON_NATIVE.cmake  PC_LINUX.cmake  PC_WIN.cmake  RASPI_CROSS.cmake  RASPI_NATIVE.cmake  common.cmake
